# reddit-mcp

./: .editorconfig  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: diagram-freshness.yml  vulture-check.yml
docs/architecture/: system-context.md
src/reddit_mcp/: __init__.py  core.py  mcp_server.py  transport.py
tests/: conftest.py  fixtures.py  test_core.py  test_mcp_server.py  test_otel_wiring.py  test_transport.py
